tests/snapshots/parse__assert_test.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(__assert_fail)\n  Function(__assert_fail)\n  Function(main)\n\n"
stderr: ""
status: 0
