tests/snapshots/parse__bitfield_test.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  StructDef(Flags)\n  Function(main)\n\n"
stderr: ""
status: 0
