tests/snapshots/parse__command_line_defines.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  VarDecl(foo_defined)\n  VarDecl(bar_value)\n  Function(main)\n\n"
stderr: ""
status: 0
