tests/snapshots/parse__compare_logic.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(main)\n\n"
stderr: ""
status: 0
