tests/snapshots/parse__enum.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  EnumDef(Color)\n  EnumDef(Status)\n  Function(main)\n\n"
stderr: ""
status: 0
