tests/snapshots/parse__error_warning.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(main)\n\n"
stderr: "warning: #warning at line 7: Feature is enabled\n"
status: 0
