tests/snapshots/parse__float_params.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(add_doubles)\n  Function(mixed_params)\n  Function(main)\n\n"
stderr: ""
status: 0
